--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -14,8 +14,23 @@
   </div>
 
   <div class="form-group">
-    <label>Bio</label>
-    <%= f.text_area :bio, rows: 5, placeholder: "Say something about yourself", class: "form-control" %>
+    <label>Street</label>
+    <%= f.text_field :street, placeholder: "Street", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Postal Code</label>
+    <%= f.text_field :postal_code, placeholder: "Postal Code", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>City</label>
+    <%= f.text_field :city, placeholder: "City", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Country</label>
+    <%= f.text_field :country, placeholder: "Country", class: "form-control" %>
   </div>
 
   <div class="actions">
