--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,12 +4,14 @@
     <% @products.each do |product|%>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <%= image_tag product.photo, style: 'height:20em'%>
+        <%= image_tag product.photo, style: 'height:15em'%>
         <div class="caption">
           <h3><%= product.name %></h3>
           <p><%= product.price%></p>
           <p><%= product.description%></p>
-          <p><a href="#" class="btn btn-primary" role="button">Add to Cart</a> <a href="#" class="btn btn-default" role="button">View</a></p>
+          <p>
+            <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "View", product, class: "btn btn-default"%>
+          </p>
         </div>
       </div>
     </div>
