--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,7 @@
             <li><%= link_to "Create Profile", new_profile_path %></li>
           <% end %>
           <li><%= link_to "Edit Password", edit_user_registration_path %></li>
+          <li><%= link_to "Add Dreams", new_product_path %></li>
 
           <li role="separator" class="divider"></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
