--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
         <%= image_tag product.photo, style: 'height:15em'%>
         <div class="caption">
           <h3><%= product.name %></h3>
-          <p><%= product.price%></p>
+          <p><%= "€#{product.price}"%></p>
           <p>
             <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "View", product, class: "btn btn-default"%>
           </p>
