--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
         <%= image_tag @product.photo, style: 'height:20em'%>
         <div class="caption">
           <h3><%= @product.name %></h3>
-          <p><%= @product.price%></p>
+          <p><%= "€#{@product.price}"%></p>
           <p><%= @product.description%></p>
           <p>
             <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "Back", products_path, class:"btn btn-default"%>
