--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,7 @@
           <p><%= @product.description%></p>
           <p>
             <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "Back", products_path, class:"btn btn-default"%>
+            <%= link_to "Edit", edit_product_path, class:"btn btn-primary"%>
           </p>
         </div>
     </div>
