--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,6 +9,7 @@
           <p>
             <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "Back", products_path, class:"btn btn-default"%>
             <%= link_to "Edit", edit_product_path, class:"btn btn-primary"%>
+            <%= link_to "Delete", product_path(@product.id), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger"%>
           </p>
         </div>
     </div>
