Add admin to user and minor fixes

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,16 @@
+<% if user_signed_in? && current_user.admin?%>
 <h1>New Dream</h1>
-<%= render "form" %>
+  <%= render "form" %>
+<%else%>
+<div class="row">
+  <div class="col-sm-3">
+  <%= image_tag "http://hellogiggles.com/wp-content/uploads/2015/11/30/o-DAWSONS-CREEK-REUNION-facebook.jpg", style: "width:20em"%>
+  </div>
+    <div class="col-sm-9">
+      <h1>
+        <%= "Seems like you are not a dream catcher!" %>
+      </h1>
+
+    </div>
+</div>
+<%end%>
