--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,8 +8,10 @@
           <p><%= @product.description%></p>
           <p>
             <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "Back", products_path, class:"btn btn-default"%>
+            <% if user_signed_in? && current_user.admin?%>
             <%= link_to "Edit", edit_product_path, class:"btn btn-primary"%>
             <%= link_to "Delete", product_path(@product.id), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger"%>
+            <%end%>
           </p>
         </div>
     </div>
