--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,8 +31,9 @@
             <li><%= link_to "Create Profile", new_profile_path %></li>
           <% end %>
           <li><%= link_to "Edit Password", edit_user_registration_path %></li>
+          <% if user_signed_in? && current_user.admin?%>
           <li><%= link_to "Add Dreams", new_product_path %></li>
-
+          <%end%>
           <li role="separator" class="divider"></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         </ul>
