--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? && current_user.admin?%>
-<h1>New Dream</h1>
+<h1 class="text-center">New Dream</h1>
   <%= render "form" %>
 <%else%>
 <div class="row">
