--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,27 @@
   <body>
     <%= render "shared/navbar"%>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
     <div class="container">
+
+      <% if notice != nil %>
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <%= notice %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <%end%>
+      <% if alert != nil %>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <%= alert %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <%end%>
+
       <%= yield %>
     </div>
-    
+
   </body>
 </html>
