added cart view and added div-wrapper to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,12 @@
           </button>
         </div>
       <%end%>
-
-      <%= yield %>
-    </div>
-
+      <div class="row row-offcanvas row-offcanvas-right">
+        <div class="col-12 col-md-9">
+          <%= yield %>
+        </div>
+        <%= render "shared/shopping_cart"%>
+      </div>
+    </div>    
   </body>
 </html>
