commented out not yet implementation of cart-logic in its view

--- a/app/views/shared/_shopping_cart.html.erb
+++ b/app/views/shared/_shopping_cart.html.erb
@@ -1,8 +1,8 @@
 <div class"col-6 col-md-3 sidebar-offcanvas" id="sidebar">
   <div class="sidebar-module sidebar-module-inset shopping-cart">
     <h4>Shopping Cart</h4>
-    <% @items.each do |item| %>
+    <!-- <% @items.each do |item| %>
       <p><%= item.amount %> x <%= item.product.title %></p>
-    <% end%>
+    <% end%> -->
   </div>
-</div>    
+</div>
