made static shopping items examples as filler

--- a/app/views/shared/_shopping_cart.html.erb
+++ b/app/views/shared/_shopping_cart.html.erb
@@ -1,8 +1,9 @@
 <div class"col-6 col-md-3 sidebar-offcanvas" id="sidebar">
   <div class="sidebar-module sidebar-module-inset shopping-cart">
     <h4>Shopping Cart</h4>
-    <!-- <% @items.each do |item| %>
-      <p><%= item.amount %> x <%= item.product.title %></p>
-    <% end%> -->
+      <p>2 x Eat cheese</p>
+      <p>1 x Go to the NorthPole</p>
+      <p>1 x Be Superman</p>
+      <p>10 x Be an awesome Coder</p>
   </div>
 </div>
