--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,8 +8,8 @@
         <div class="caption">
           <h3><%= product.name %></h3>
           <p><%= "€#{product.price}"%></p>
-          <p>
-            <a href="#" class="btn btn-primary" role="button">Add to Cart</a> <%= link_to "View", product, class: "btn btn-default"%>
+            <%= link_to "Add to cart", add_to_cart_path(product.id), class: "btn btn-primary" %>
+            <%= link_to "View", product, class: "btn btn-default"%>
           </p>
         </div>
       </div>
