--- a/app/views/shared/_shopping_cart.html.erb
+++ b/app/views/shared/_shopping_cart.html.erb
@@ -3,9 +3,9 @@
     <h4>Shopping Cart</h4>
     <% if @items.present? %>
       <%= @items.each do |item| %>
-          <p><%= item.name %></p>
-          <p><%= item.price %></p>
+          <p><%= item.product.name %></p>
           <p><%= item.amount %></p>
+          <p><%= item.product.price %></p>
         <%end%>
     <% else %>
           <p>Empty cart!</p>
