--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,11 +8,15 @@
         <div class="caption">
           <h3><%= product.name %></h3>
           <p><%= "€#{product.price}"%></p>
-            <%= link_to "Add to cart", add_to_cart_path(product.id), class: "btn btn-primary" %>
+            <%= button_to "Add to cart", {:controller => :shopping_cart,
+                  :action => 'create', :product_id => product.id }, :method => :create,class: "btn btn-primary" %>
             <%= link_to "View", product, class: "btn btn-default"%>
           </p>
         </div>
       </div>
     </div>
     <%end%>
+    <p>Session info: </p>
+    <%= session.inspect %>
+
   </div>
