--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,75 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-img.navbar-brand {
-  height: 4em;
+body {
+    background-color: #f5f8fa;
+}
+
+.navbar-brand {
+    padding-top: 2em;
+}
+
+.navbar-nav li a {
+    line-height: 150px;
+    height: 150px;
+    padding-top: 0;
+    font-size: 120%;
+}
+
+.sidebar-module {
+    background-color: #3097d1;
+    margin-left: 85%;
+    margin-right: -3%;
+    margin-top: 2%;
+    border: 1px solid black;
+    border-radius: 5%;
+}
+
+.sidebar-module p {
+    padding-left: 15%;
+    color: #f5f8fa;
+}
+
+.sidebar-module h4 {
+    padding-left: 5%;
+    color: #f5f8fa;
+}
+
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:hover {
+    color: #000;
+    /*Sets the text hover color on navbar*/
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
+    color: white;
+    /*BACKGROUND color for active*/
+    background-color: #030033;
+}
+
+.navbar-default {
+    background-color: #3097d1;
+    border-color: #030033;
+}
+
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a:hover {
+    color: #262626;
+    text-decoration: none;
+    background-color: #66CCFF;
+    /*change color of links in drop down here*/
+}
+
+.nav > li > a:focus,
+.nav > li > a:hover {
+    text-decoration: none;
+    background-color: silver;
+    /*Change rollover cell color here*/
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: white;
+    /*Change active text color here*/
 }
