--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,17 @@
-<h1>Dreams</h1>
 <hr>
-  <div class="row">
-    <% @products.each do |product|%>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <%= image_tag product.photo, style: 'height:15em'%>
-        <div class="caption">
-          <h3><%= product.name %></h3>
-          <p><%= "€#{product.price}"%></p>
-            <%= button_to "Add to cart", {:controller => :shopping_cart,
-                  :action => 'create', :product_id => product.id }, :method => :create,class: "btn btn-primary" %>
-            <%= link_to "View", product, class: "btn btn-default"%>
-          </p>
-        </div>
-      </div>
+<div class="row">
+  <% @products.each do |product|%>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag product.photo, style: 'height:15em'%>
+      <div class="caption">
+        <h3><%= product.name %></h3>
+        <p><%= "€#{product.price}"%></p>
+        <%= link_to "Add to cart", {:controller => :shopping_cart, :action => 'create', :product_id => product.id }, :method => :create,class: "btn btn-primary" %>
+        <%= link_to "View", product, class: "btn btn-default"%>
+      </p>
     </div>
-    <%end%>
-    <p>Session info: </p>
-    <%= session.inspect %>
-
   </div>
+</div>
+<%end%>
+</div>
