--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,41 +3,51 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to root_path do %>
-      <%= image_tag "https://d30y9cdsu7xlg0.cloudfront.net/png/499767-200.png", alt: "Brand", class: "navbar-brand" %>
-        <span class="navbar-brand">Bigdreams</span>
-      <% end %>
+
+      <a class="navbar-brand" href="/">
+        <img alt="Bigdreams" src="https://d30y9cdsu7xlg0.cloudfront.net/png/499767-200.png" style="height: 5em">
+      </a>
+
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="/">Bigdreams</a>
+        </li>
+      </ul>
+
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
 
         <% if !user_signed_in? %>
-          <li><%= link_to "Log In", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% else %>
+        <li><%= link_to "Log In", new_user_session_path %></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      <% else %>
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-          <%= current_user.has_profile? ? current_user.full_name : current_user.email  %> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.has_profile? ? current_user.full_name : current_user.email  %>
+            <span class="caret"></span>
+          </a>
 
-        <ul class="dropdown-menu">
-          <li role="separator" class="divider"></li>
+          <ul class="dropdown-menu">
+            <li role="separator" class="divider"></li>
 
-          <% if current_user.has_profile? %>
+            <% if current_user.has_profile? %>
             <li><%= link_to "Edit Profile", edit_profile_path(current_user.profile) %></li>
           <% else %>
             <li><%= link_to "Create Profile", new_profile_path %></li>
-          <% end %>
-          <li><%= link_to "Edit Password", edit_user_registration_path %></li>
-          <% if user_signed_in? && current_user.admin?%>
-          <li><%= link_to "Add Dreams", new_product_path %></li>
-          <%end%>
-          <li role="separator" class="divider"></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-        </ul>
+            <% end %>
+            <li><%= link_to "Edit Password", edit_user_registration_path %></li>
+            <% if user_signed_in? && current_user.admin?%>
+            <li><%= link_to "Add Dreams", new_product_path %></li>
+            <%end%>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          </ul>
 
         </li>
         <% end %>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
+    <!--/.nav-collapse -->
   </div>
 </nav>
