--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,19 +10,25 @@ body {
 }
 
 .navbar-nav li a {
-    line-height: 150px;
-    height: 150px;
+    // line-height: 150px;
+    // height: 150px;
     padding-top: 0;
-    font-size: 120%;
+    font-size: 140%;
+}
+
+.navbar-nav {
+    // line-height: 150px;
+    height: 150px;
+    padding-top: 5em;
 }
 
 .sidebar-module {
     background-color: #3097d1;
-    margin-left: 85%;
-    margin-right: -3%;
-    margin-top: 2%;
+    margin-left: 71em;
+    margin-right: -10em;
+    margin-top: -3em;
     border: 1px solid black;
-    border-radius: 5%;
+    border-radius: 1%;
 }
 
 .sidebar-module p {
