--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 text-center">
+  <div class="col-md-6 col-md-offset-3">
 
-  <h2>Change your password</h2>
+    <h2>Change your password</h2>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
     <%= f.hidden_field :reset_password_token %>
 
@@ -16,7 +16,7 @@
     </div>
 
     <%= f.submit "Change my password", :class => "btn btn-danger" %>
-  <% end %>
+    <% end %>
 
   </div>
-</div>
+</div 
