--- a/app/views/shared/_shopping_cart.html.erb
+++ b/app/views/shared/_shopping_cart.html.erb
@@ -1,13 +1,17 @@
 <div class="container">
-<div class"col-6 col-md-2  sidebar-offcanvas" id="sidebar">
-  <div class="sidebar-module sidebar-module-inset shopping-cart">
-    <h4>Shopping Cart</h4>
-    <% if @items.present? %>
+  <div class"col-6 col-md-2  sidebar-offcanvas" id="sidebar">
+    <div class="sidebar-module sidebar-module-inset shopping-cart">
+      <h4>Shopping Cart</h4>
+      <% if @items.present? %>
       <% @items.each do |item| %>
-          <p><%=Product.find(item["product_id"]).name %> </p> : <p><%=item["amount"] %></p>
-        <%end%>
+      <p><%=item["amount"] %>
+        x
+        <%=Product.find(item["product_id"]).name %></p>
+
+      <%end%>
     <% else %>
-    <p>Empty cart!</p>
-    <% end %>
+      <p>Empty cart!</p>
+      <% end %>
+    </div>
   </div>
 </div>
