--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,19 @@
 <div class="row">
+  <div class="col-lg-6">
+    <div class="input-group">
+      <%= form_tag(root_path, :method => "get", id: "search-form", class: "input-group") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search Products", class: "form-control" %>
+      <span class="input-group-btn">
+        <%= submit_tag "Search", :name => nil, class: "btn btn-default" %>
+      </span>
+      <% end %>
+    </div>
+    <!-- /input-group -->
+  </div>
+  <!-- /.col-lg-6 -->
+</div>
+<hr>
+<div class="row">
   <% @products.each do |product|%>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
