--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,7 @@
       <p><%= "€#{@product.price}"%></p>
       <p><%= @product.description%></p>
       <p>
-        <a href="#" class="btn btn-primary" role="button">Add to Cart</a>
+        <%= link_to "Add to cart", {:controller => :shopping_cart, :action => 'create', :product_id => @product.id }, :method => :create,class: "btn btn-primary" %>
         <% if user_signed_in? && current_user.admin?%>
         <%= link_to "Edit", edit_product_path, class:"btn btn-primary"%>
         <%= link_to "Delete", product_path(@product.id), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger"%>
@@ -15,5 +15,5 @@
       <%end%><%= link_to "Back", products_path, class:"btn btn-default"%>
     </p>
   </div>
-  <%= render "shared/shopping_cart"%>
 </div>
+  <%= render "shared/shopping_cart"%>
